--- a/src/assets/css/index.css
+++ b/src/assets/css/index.css
@@ -23,7 +23,21 @@ picture {
   margin: 0;
 }
 
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
+  font-weight: 400;
+}
+
 body {
+  font-family: var(--font-sans-normal);
+  font-size: var(--font-400);
+  color: hsl(var(--color-white));
+  background-color: hsl(var(--color-dark));
   line-height: 1.5;
   min-height: 100vh;
 }
@@ -53,12 +67,29 @@ select {
   }
 }
 
-/* ----- COLOR VALUES ----- */
 :root {
+  /* ----- Colors ----- */
   --color-dark: 230 35% 7%;
   --color-light: 231 77% 90%;
   --color-white: 0 0% 100%;
+
+  /* ----- Font sizes ----- */
+  --font-900: 9.375rem;
+  --font-800: 6.25rem;
+  --font-700: 3.5rem;
+  --font-600: 2rem;
+  --font-500: 1.75rem;
+  --font-400: 1.125rem;
+  --font-300: 1rem;
+  --font-200: .875rem;
+
+  /* ----- Font families ----- */
+  --font-serif: "Bellefair", serif;
+  --font-sans-cond: "Barlow Condensed", sans-serif;
+  --font-sans-normal: "Barlow", sans-serif;
 }
+
+/* ----- Colors ----- */
 
 .bg-dark {
   background-color: hsl(var(--color-dark));
@@ -82,4 +113,111 @@ select {
 
 .text-white {
   color: hsl(var(--color-white));
+}
+
+/* ----- Typography ----- */
+
+.font-serif {
+  font-family: var(--font-serif);
+}
+
+.font-sans-cond {
+  font-family: var(--font-sans-cond);
+}
+
+.font-sans-normal {
+  font-family: var(--font-sans-normal);
+}
+
+.letter-spacing-1 {
+  letter-spacing: 4.75px;
+}
+
+.letter-spacing-2 {
+  letter-spacing: 2.7px;
+}
+
+.letter-spacing-3 {
+  letter-spacing: 2.35px;
+}
+
+.font-900 {
+  font-size: var(--font-900);
+}
+
+.font-800 {
+  font-size: var(--font-800);
+}
+
+.font-700 {
+  font-size: var(--font-700);
+}
+
+.font-600 {
+  font-size: var(--font-600);
+}
+
+.font-500 {
+  font-size: var(--font-500);
+}
+
+.font-400 {
+  font-size: var(--font-400);
+}
+
+.font-300 {
+  font-size: var(--font-300);
+}
+
+.font-200 {
+  font-size: var(--font-200);
+}
+
+.font-900,
+.font-800,
+.font-700,
+.font-600 {
+  line-height: 1.1;
+}
+
+.numbered-title {
+  font-family: var(--font-sans-cond);
+  font-size: var(--font-500);
+  text-transform: uppercase;
+  letter-spacing: 4.72px;
+}
+
+.numbered-title span {
+  margin-right: .5em;
+  font-weight: var(--font-700);
+  color: hsl(var(--color-white) / .25);
+}
+
+.large-button {
+  display: grid;
+  place-items: center;
+  padding: 0 2em;
+  aspect-ratio: 1;
+  text-decoration: none;
+  border-radius: 50%;
+  position: relative;
+  z-index: 1;
+}
+
+.large-button::after {
+  content: '';
+  position: absolute;
+  z-index: -1;
+  background: hsl(var(--color-white) / .15);
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
+  opacity: 0;
+  transition: opacity 500ms linear, transform 500ms ease-in-out;
+}
+
+.large-button:hover::after,
+.large-button:focus::after {
+  opacity: 1;
+  transform: scale(1.5);
 }
